--- a/index.html
+++ b/index.html
@@ -12,6 +12,54 @@
 </head>
 <body>
 
+    <main id="main__content-login" class="main__content-login">
+        <section id="content__login" class="content__login">
+            <section id="content__login-carrossel" class="content__login-carrossel">
+                content__login-carrossel
+            </section>
+
+            <section id="content__login-form" class="content__login-form">
+                <img src="./assets/images/instagram-logo.svg" alt="instagram logo" title="instagram">
+
+                <div id="login__form-wrapper" class="login__form-wrapper">
+                    <div id="form__inputs" class="form__inputs">
+                        <input type="text" name="text" placeholder="Phone, user name or email">
+                        <input type="password" name="password" placeholder="Password">
+                        <button type="button">Login</button>
+                    </div>
+
+                    <span id="content__login-space" class="content__login-space">
+                        <div class="trace-line"></div>
+                        <span>
+                            OR
+                        </span>
+                        <div class="trace-line"></div>
+                    </span>
+
+                    <div id="login__alternative" class="login__alternative">
+                        <a href="#" title="login with Facebook">
+                            <div id="login__alternative-facebook" class="login__alternative-facebook">
+                                <svg aria-label="Entrar com o Facebook" class="x1lliihq x1n2onr6 x173jzuc" fill="currentColor" height="20" role="img" viewBox="0 0 16 16" width="20"><title>Entrar com o Facebook</title><g clip-path="url(#a)"><path d="M8 0C3.6 0 0 3.6 0 8c0 4 2.9 7.3 6.8 7.9v-5.6h-2V8h2V6.2c0-2 1.2-3.1 3-3.1.9 0 1.8.2 1.8.2v2h-1c-1 0-1.3.6-1.3 1.3V8h2.2l-.4 2.3H9.2v5.6C13.1 15.3 16 12 16 8c0-4.4-3.6-8-8-8Z" fill="currentColor"></path></g><defs><clipPath id="a"><rect fill="currentColor" height="16" width="16"></rect></clipPath></defs></svg>
+                                login with Facebook
+                            </div>
+                        </a>
+                        <a href="#" title="Forgot password?">Forgot password?</a>
+                    </div>
+
+                    <div id="login__signin" class="login__signin">
+                        Don't have an account? <a href="#" title="Sign up now">Sign up now</a>.
+                    </div>
+                </div>
+
+            </section>
+        </section>
+
+        <footer id="footer" class="footer">
+
+        </footer>
+        
+    </main>
+
     <script src="./assets/js/main.js"></script>
 </body>
 </html>
