Adding structure and logic for carrossel moviment

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./assets/css/global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="shortcut icon" href="./assets/images/instagram-favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     <title>Course frontEnd challenge instagram</title>
@@ -15,7 +16,12 @@
     <main id="main__content-login" class="main__content-login">
         <section id="content__login" class="content__login">
             <section id="content__login-carrossel" class="content__login-carrossel">
-                content__login-carrossel
+                <div id="content__login-carrossel-wrapper" class="content__login-carrossel-wrapper">
+                    <div id="1" class="content__login-img-wrapper carrossel_img-1"></div>
+                    <div id="2" class="content__login-img-wrapper carrossel_img-2"></div>
+                    <div id="3" class="content__login-img-wrapper carrossel_img-3"></div>
+                    <div id="4" class="content__login-img-wrapper carrossel_img-4"></div>
+                </div>
             </section>
 
             <section id="content__login-form" class="content__login-form">
@@ -47,11 +53,12 @@
                     </div>
 
                     <div id="login__signin" class="login__signin">
-                        Don't have an account? <a href="#" title="Sign up now">Sign up now</a>.
+                        Don't have an account? <a href="#" title="Sign up now">Sign up now</a>
                     </div>
                 </div>
 
             </section>
+        
         </section>
 
         <footer id="footer" class="footer">
