Adding footer and mobile behavior

--- a/index.html
+++ b/index.html
@@ -62,9 +62,27 @@
         </section>
 
         <footer id="footer" class="footer">
-
+            <ul>
+                <li>Meta</li>
+                <li>About</li>
+                <li>Blog</li>
+                <li>Careers</li>
+                <li>Help</li>
+                <li>API</li>
+                <li>Privacy</li>
+                <li>Terms</li>
+                <li>Locations</li>
+                <li>Instagram Lite</li>
+                <li>Meta AI</li>
+                <li>Meta AI Articles</li>
+                <li>Topics</li>
+                <li>Upload contacts and non-users</li>
+                <li>Meta verified</li>
+            </ul>
         </footer>
-        
+        <div class="rights">
+            © 2025 Instagram from Meta
+        </div>
     </main>
 
     <script src="./assets/js/main.js"></script>
