Updating the images and content to something with no comercial rights

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./assets/css/global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="shortcut icon" href="./assets/images/instagram-favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/images/cat-fav.jpg" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     <title>Course frontEnd challenge instagram</title>
@@ -25,7 +25,7 @@
             </section>
 
             <section id="content__login-form" class="content__login-form">
-                <img src="./assets/images/instagram-logo.svg" alt="instagram logo" title="instagram">
+                <h3 id="form-title">Cats login</h3>
 
                 <div id="login__form-wrapper" class="login__form-wrapper">
                     <div id="form__inputs" class="form__inputs">
@@ -63,25 +63,24 @@
 
         <footer id="footer" class="footer">
             <ul>
-                <li>Meta</li>
+                <li>Cats</li>
                 <li>About</li>
                 <li>Blog</li>
-                <li>Careers</li>
+                <li>Career</li>
                 <li>Help</li>
                 <li>API</li>
                 <li>Privacy</li>
                 <li>Terms</li>
                 <li>Locations</li>
-                <li>Instagram Lite</li>
-                <li>Meta AI</li>
-                <li>Meta AI Articles</li>
+                <li>Cat Lite</li>
+                <li>Cat AI</li>
+                <li>Cat AI Articles</li>
                 <li>Topics</li>
-                <li>Upload contacts and non-users</li>
-                <li>Meta verified</li>
+                <li>Cat verified</li>
             </ul>
         </footer>
         <div class="rights">
-            © 2025 Instagram from Meta
+            © Belongs to all cats, 2025
         </div>
     </main>
 
