--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="./assets/images/cat-fav.jpg" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-    <title>Course frontEnd challenge instagram</title>
+    <title>Course frontEnd challenge</title>
 </head>
 <body>
 
@@ -31,7 +31,7 @@
                     <div id="form__inputs" class="form__inputs">
                         <input type="text" name="text" placeholder="Phone, user name or email">
                         <input type="password" name="password" placeholder="Password">
-                        <button type="button">Login</button>
+                        <button>Login</button>
                     </div>
 
                     <span id="content__login-space" class="content__login-space">
@@ -43,10 +43,10 @@
                     </span>
 
                     <div id="login__alternative" class="login__alternative">
-                        <a href="#" title="login with Facebook">
+                        <a href="#" title="login with Cats social">
                             <div id="login__alternative-facebook" class="login__alternative-facebook">
-                                <svg aria-label="Login with Facebook" class="x1lliihq x1n2onr6 x173jzuc" fill="currentColor" height="20" role="img" viewBox="0 0 16 16" width="20"><title>Login with Facebook</title><g clip-path="url(#a)"><path d="M8 0C3.6 0 0 3.6 0 8c0 4 2.9 7.3 6.8 7.9v-5.6h-2V8h2V6.2c0-2 1.2-3.1 3-3.1.9 0 1.8.2 1.8.2v2h-1c-1 0-1.3.6-1.3 1.3V8h2.2l-.4 2.3H9.2v5.6C13.1 15.3 16 12 16 8c0-4.4-3.6-8-8-8Z" fill="currentColor"></path></g><defs><clipPath id="a"><rect fill="currentColor" height="16" width="16"></rect></clipPath></defs></svg>
-                                login with Facebook
+                                <svg aria-label="Login with Cats social" class="x1lliihq x1n2onr6 x173jzuc" fill="currentColor" height="20" role="img" viewBox="0 0 16 16" width="20"><title>Login with Cats social</title><g clip-path="url(#a)"><path d="M8 0C3.6 0 0 3.6 0 8c0 4 2.9 7.3 6.8 7.9v-5.6h-2V8h2V6.2c0-2 1.2-3.1 3-3.1.9 0 1.8.2 1.8.2v2h-1c-1 0-1.3.6-1.3 1.3V8h2.2l-.4 2.3H9.2v5.6C13.1 15.3 16 12 16 8c0-4.4-3.6-8-8-8Z" fill="currentColor"></path></g><defs><clipPath id="a"><rect fill="currentColor" height="16" width="16"></rect></clipPath></defs></svg>
+                                login with Cats social
                             </div>
                         </a>
                         <a href="#" title="Forgot password?">Forgot password?</a>
